@startuml

title __BRIDGE's Class Diagram__\n

  namespace com.atguigu.bridge {
    interface com.atguigu.bridge.Brand {
        {abstract} + call()
        {abstract} + close()
        {abstract} + open()
    }
  }
  

  namespace com.atguigu.bridge {
    class com.atguigu.bridge.Client {
        {static} + main()
    }
  }
  

  namespace com.atguigu.bridge {
    class com.atguigu.bridge.FoldedPhone {
        + FoldedPhone()
        + call()
        + close()
        + open()
    }
  }
  

  namespace com.atguigu.bridge {
    abstract class com.atguigu.bridge.Phone {
        + Phone()
        # call()
        # close()
        # open()
    }
  }
  

  namespace com.atguigu.bridge {
    class com.atguigu.bridge.UpRightPhone {
        + UpRightPhone()
        + call()
        + close()
        + open()
    }
  }
  

  namespace com.atguigu.bridge {
    class com.atguigu.bridge.Vivo {
        + call()
        + close()
        + open()
    }
  }
  

  namespace com.atguigu.bridge {
    class com.atguigu.bridge.XiaoMi {
        + call()
        + close()
        + open()
    }
  }
  

  com.atguigu.bridge.FoldedPhone -up-|> com.atguigu.bridge.Phone
  com.atguigu.bridge.Phone o-- com.atguigu.bridge.Brand : brand
  com.atguigu.bridge.UpRightPhone -up-|> com.atguigu.bridge.Phone
  com.atguigu.bridge.Vivo .up.|> com.atguigu.bridge.Brand
  com.atguigu.bridge.XiaoMi .up.|> com.atguigu.bridge.Brand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
